// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`auto generate usage > inline function > USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > inline function 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -h, --help             Display this help message
  -v, --version          Display this version
"
`;

exports[`auto generate usage > locale resource not found 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -f, --foo <foo>          [string]  The foo option
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`auto generate usage > loosely entry command > USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version
 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`auto generate usage > loosely entry command 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`auto generate usage > loosely sub commands > command2 1`] = `
"USAGE:
  COMMAND command2 <OPTIONS>

OPTIONS:
  -b, --bar [bar]           (default: 42)
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`auto generate usage > loosely sub commands > main 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`auto generate usage > loosely sub commands 1`] = `
"USAGE:
  COMMAND <OPTIONS>

OPTIONS:
  -f, --foo <foo>          
  -h, --help               Display this help message
  -v, --version            Display this version

USAGE:
  COMMAND command2 <OPTIONS>

OPTIONS:
  -b, --bar [bar]           (default: 42)
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;

exports[`auto generate usage > strictly entry command > Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -f, --foo <foo>          [string]  The foo option
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -f, --foo <foo>          [string]  The foo option
  -h, --help               [boolean] Display this help message
  -v, --version            [boolean] Display this version

EXAMPLES:
  # Example 1
  $ gunshi --foo bar
  # Example 2
  $ gunshi -f bar
"
`;

exports[`auto generate usage > strictly sub commands > command2 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi command2 <OPTIONS>

OPTIONS:
  -b, --bar [bar]          The bar option (default: 42)
  -h, --help               Display this help message
  -v, --version            Display this version

EXAMPLES:
  # Example 1
  $ gunshi command2 --bar 42
  # Example 2
  $ gunshi command2 -b 42
"
`;

exports[`auto generate usage > strictly sub commands > main 1`] = `
"Modern CLI tool (gunshi v0.0.0)
使い方:
    gunshi [command1] <オプション>
    gunshi <コマンド>

コマンド:
    command2                 
    command1                 

詳細は、コマンドと\`--help\`フラグを実行してください:
    gunshi command2 --help
    gunshi command1 --help

オプション:
    -f, --foo <foo>               The foo option
    -h, --help                    Display this help message
    -v, --version                 Display this version

例:
    # Example 1
    $ gunshi --foo bar
    # Example 2
    $ gunshi -f bar
"
`;

exports[`auto generate usage > strictly sub commands 1`] = `
"Modern CLI tool (gunshi v0.0.0)

使い方:
    gunshi [command1] <オプション>
    gunshi <コマンド>

コマンド:
    command2                 
    command1                 

詳細は、コマンドと\`--help\`フラグを実行してください:
    gunshi command2 --help
    gunshi command1 --help

オプション:
    -f, --foo <foo>               The foo option
    -h, --help                    Display this help message
    -v, --version                 Display this version

例:
    # Example 1
    $ gunshi --foo bar
    # Example 2
    $ gunshi -f bar

Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi command2 <OPTIONS>

OPTIONS:
  -b, --bar [bar]          The bar option (default: 42)
  -h, --help               Display this help message
  -v, --version            Display this version

EXAMPLES:
  # Example 1
  $ gunshi command2 --bar 42
  # Example 2
  $ gunshi command2 -b 42
"
`;

exports[`custom generate usage > basic 1`] = `
"Usage:
  gunshi [options]

Options:
  --foo        [string]    this is foo option
  --bar        [boolean]   this is bar option
  --baz        [number]    this is baz option
  --help       [boolean]   Display this help message
  --version    [boolean]   Display this version

*****************************************
* Optional argument '--bar' is required *
*****************************************"
`;

exports[`edge cases > 'description' option 1`] = `
"Modern CLI tool (gunshi v0.0.0)

USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -d, --description <description>          This is a description of description option
  -h, --help                               Display this help message
  -v, --version                            Display this version
"
`;

exports[`usageSilent 1`] = `
"Modern CLI tool (gunshi v0.0.0)
USAGE:
  gunshi <OPTIONS>

OPTIONS:
  -f, --foo <foo>          this is foo option
  --bar                    this is bar option
  -b, --baz [baz]          this is baz option (default: 42)
  -h, --help               Display this help message
  -v, --version            Display this version
"
`;
